# python-convertibles

./: README.md
convertibles/: pyproject.toml
convertibles/src/convertibles/: __init__.py
convertibles/src/convertibles.egg-info/: PKG-INFO  SOURCES.txt
convertibles/src/convertibles/modules/: bool_convertible.py  complex_convertible.py  float_convertible.py  int_convertible.py  str_convertible.py
